--- a/team.html
+++ b/team.html
@@ -75,7 +75,7 @@
                 </div>
               </div>
               <!-- زر خارج البوكس -->
-              <a href="our team/profile-abdelraouf.html" 
+              <a href="profile-abdelraouf.html" 
                  class="btn mt-3" 
                  style="background:#000; color:#fff; border-radius:8px;">
                  Learn More
@@ -150,5 +150,6 @@
     <script src="js/custom.js"></script>
   </body>
 </html>
+
 
 
