--- a/profile-abdelraouf.html
+++ b/profile-abdelraouf.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
-<html lang="ar" dir="rtl">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>السيرة الذاتية - اسمك</title>
+    <title>Personal Portfolio - Your Name</title>
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=Tajawal:wght@400;700&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 
         :root {
-            --primary-color: #333;
+            --primary-color: #f0f0f0;
             --secondary-color: #007BFF;
-            --background-color: #f4f4f4;
-            --text-color: #555;
+            --background-color: #121212;
+            --card-background: #1e1e1e;
+            --text-color: #ccc;
+            --heading-color: #fff;
             --border-radius: 8px;
         }
 
@@ -22,7 +24,7 @@
         }
 
         body {
-            font-family: 'Tajawal', sans-serif;
+            font-family: 'Roboto', sans-serif;
             line-height: 1.6;
             color: var(--text-color);
             background: var(--background-color);
@@ -32,9 +34,9 @@
         .container {
             max-width: 900px;
             margin: 20px auto;
-            background: #fff;
+            background: var(--card-background);
             border-radius: var(--border-radius);
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
             padding: 30px;
         }
 
@@ -44,14 +46,14 @@
         }
 
         header h1 {
-            color: var(--primary-color);
+            color: var(--heading-color);
             margin-bottom: 5px;
             font-size: 2.5em;
         }
 
         header p {
             font-size: 1.2em;
-            color: #777;
+            color: var(--text-color);
         }
 
         .profile-pic {
@@ -87,7 +89,7 @@
 
         .info-item p, .info-item ul {
             font-size: 1em;
-            padding-right: 15px;
+            padding-left: 15px;
             line-height: 1.8;
         }
         
@@ -102,7 +104,7 @@
             font-weight: bold;
             display: inline-block;
             width: 1em;
-            margin-right: -1em;
+            margin-left: -1em;
         }
 
         .skills-list {
@@ -123,80 +125,92 @@
             text-align: center;
             margin-top: 40px;
             padding-top: 20px;
-            border-top: 1px solid #ddd;
+            border-top: 1px solid #444;
             font-size: 0.9em;
             color: #888;
         }
         
-        .contact-info a {
-            color: var(--secondary-color);
-            text-decoration: none;
-            margin: 0 10px;
+        .social-icons a {
+            color: var(--primary-color);
+            font-size: 24px;
+            margin: 0 15px;
+            transition: color 0.3s ease;
         }
+
+        .social-icons a:hover {
+            color: var(--secondary-color);
+        }
+
     </style>
 </head>
 <body>
     <div class="container">
         <header>
-            <img src="https://via.placeholder.com/150" alt="صورة شخصية" class="profile-pic">
-            <h1>اسمك الكامل</h1>
-            <p>عنوانك الوظيفي (مثلاً: مطور ويب، مصمم جرافيك)</p>
+            <img src="https://via.placeholder.com/150/555555/FFFFFF?text=Photo" alt="Profile Picture" class="profile-pic">
+            <h1>Your Full Name</h1>
+            <p>Your Job Title (e.g., Web Developer, Graphic Designer)</p>
         </header>
 
         <section class="section">
-            <h2>من أنا</h2>
+            <h2>About Me</h2>
             <p>
-                أنا مطور ويب شغوف ولدي خبرة 5 سنوات في بناء مواقع وتطبيقات ويب ديناميكية وسريعة الاستجابة. أتمتع بمهارات قوية في HTML, CSS, JavaScript وأستخدم أحدث التقنيات لتقديم أفضل تجربة للمستخدم.
+                I'm a passionate web developer with 5 years of experience building dynamic and responsive websites and applications. I have strong skills in HTML, CSS, and JavaScript, and I use modern frameworks to deliver the best user experience.
             </p>
         </section>
 
         <section class="section">
-            <h2>الخبرة العملية</h2>
+            <h2>Work Experience</h2>
             <div class="info-item">
-                <h3>مطور ويب - شركة المستقبل</h3>
-                <p><strong>2020 - حتى الآن</strong></p>
+                <h3>Web Developer - Future Co.</h3>
+                <p><strong>2020 - Present</strong></p>
                 <ul>
-                    <li>بناء وتطوير واجهات المستخدم باستخدام HTML5 وCSS3.</li>
-                    <li>تنفيذ وظائف ديناميكية باستخدام JavaScript.</li>
-                    <li>العمل ضمن فريق لتطوير منتجات برمجية.</li>
+                    <li>Developed and maintained user interfaces using HTML5 and CSS3.</li>
+                    <li>Implemented dynamic functionalities using JavaScript.</li>
+                    <li>Collaborated with a team to build software products.</li>
                 </ul>
             </div>
             <div class="info-item">
-                <h3>مصمم واجهات - شركة الابتكار</h3>
+                <h3>UI Designer - Innovation Inc.</h3>
                 <p><strong>2018 - 2020</strong></p>
                 <ul>
-                    <li>تصميم واجهات مستخدم جذابة وسهلة الاستخدام.</li>
-                    <li>تحويل التصاميم إلى أكواد HTML وCSS.</li>
+                    <li>Designed attractive and user-friendly interfaces.</li>
+                    <li>Converted design mockups into HTML and CSS code.</li>
                 </ul>
             </div>
         </section>
 
         <section class="section">
-            <h2>التعليم</h2>
+            <h2>Education</h2>
             <div class="info-item">
-                <h3>بكالوريوس علوم الحاسوب</h3>
-                <p><strong>جامعة القاهرة، 2018</strong></p>
+                <h3>Bachelor of Computer Science</h3>
+                <p><strong>Cairo University, 2018</strong></p>
             </div>
         </section>
 
         <section class="section">
-            <h2>المهارات</h2>
+            <h2>Skills</h2>
             <div class="skills-list">
                 <span class="skill-badge">HTML5</span>
                 <span class="skill-badge">CSS3</span>
                 <span class="skill-badge">JavaScript</span>
                 <span class="skill-badge">React</span>
                 <span class="skill-badge">Node.js</span>
-                <span class="skill-badge">التصميم التفاعلي (Responsive Design)</span>
+                <span class="skill-badge">Responsive Design</span>
             </div>
         </section>
 
         <footer class="footer">
-            <p>تواصل معي:</p>
-            <div class="contact-info">
-                <a href="mailto:your.email@example.com">البريد الإلكتروني</a> |
-                <a href="https://linkedin.com/in/yourprofile" target="_blank">LinkedIn</a> |
-                <a href="tel:+1234567890">رقم الهاتف</a>
+            <p>Connect with me:</p>
+            <div class="social-icons">
+                <a href="https://www.facebook.com/yourprofile" target="_blank">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M12 0c-6.627 0-12 5.373-12 12s5.373 12 12 12 12-5.373 12-12-5.373-12-12-12zm3 8h-1.35c-.538 0-.65.221-.65.778v1.222h2l-.209 2h-1.791v7h-3v-7h-2v-2h2v-1.223c0-1.782.935-2.777 2.656-2.777h2.344v3z" fill="#fff"/></svg>
+                </a>
+                <a href="https://www.instagram.com/yourprofile" target="_blank">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M12 0c-3.149 0-3.529.013-4.757.07-1.173.057-1.996.248-2.653.518-.62.259-1.161.6-1.75 1.19-2.028 2.029-2.31 4.757-2.333 7.747v.001c.023 2.99.305 5.718 2.333 7.747.59.59 1.13.931 1.75 1.19.657.27 1.48.461 2.653.518 1.228.057 1.608.07 4.757.07s3.529-.013 4.757-.07c1.173-.057 1.996-.248 2.653-.518.62-.259 1.161-.6 1.75-1.19 2.028-2.029 2.31-4.757 2.333-7.747v-.001c-.023-2.99-.305-5.718-2.333-7.747-.59-.59-1.13-.931-1.75-1.19-.657-.27-1.48-.461-2.653-.518-1.228-.057-1.608-.07-4.757-.07zm0 1.5c3.003 0 3.376.011 4.544.066 1.05.051 1.678.204 2.115.385.453.195.837.458 1.237.857.996.995 1.285 2.131 1.309 3.513.018 1.03-.004 1.365-.004 4.095s.022 3.065-.004 4.095c-.024 1.382-.313 2.518-1.309 3.513-.4.4-.784.662-1.237.857-.437.181-1.065.334-2.115.385-1.168.055-1.54.066-4.544.066-3.003 0-3.376-.011-4.544-.066-1.05-.051-1.678-.204-2.115-.385-.453-.195-.837-.458-1.237-.857-.996-.995-1.285-2.131-1.309-3.513-.018-1.03.004-1.365.004-4.095s-.022-3.065.004-4.095c.024-1.382.313-2.518 1.309-3.513.4-.4.784-.662 1.237-.857.437-.181 1.065-.334 2.115-.385 1.168-.055 1.54-.066 4.544-.066zm0 3.5c-2.485 0-4.5 2.015-4.5 4.5s2.015 4.5 4.5 4.5 4.5-2.015 4.5-4.5-2.015-4.5-4.5-4.5zm0 1.5c1.657 0 3 1.343 3 3s-1.343 3-3 3-3-1.343-3-3 1.343-3 3-3zm4.5-5.5c-.828 0-1.5.672-1.5 1.5s.672 1.5 1.5 1.5 1.5-.672 1.5-1.5-.672-1.5-1.5-1.5z" fill="#fff"/></svg>
+                </a>
+                <a href="https://t.me/yourusername" target="_blank">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M23.91 3.79L20.3 20.84c-.25 1.21-.98 1.5-2 .94l-5.5-4.07-2.66 2.57c-.3.3-.55.56-1.1.56-.72 0-.6-.27-.84-.95L6.3 13.7l-5.45-1.7c-1.18-.35-1.19-1.16.26-1.75l21.26-8.2c.97-.43 1.9.24 1.53.94" fill="#fff"/></svg>
+                </a>
             </div>
         </footer>
     </div>
