--- a/profile-abdelraouf.html
+++ b/profile-abdelraouf.html
@@ -146,8 +146,8 @@
 <body>
     <div class="container">
         <header>
-            <img src="https://via.placeholder.com/150/555555/FFFFFF?text=Photo" alt="Profile Picture" class="profile-pic">
-            <h1>Your Full Name</h1>
+            <img src="images/team/abdelraouf.jpg" alt="Profile Picture" class="profile-pic">
+            <h1>Abdelraouf Mabrouk</h1>
             <p>Your Job Title (e.g., Web Developer, Graphic Designer)</p>
         </header>
 
