--- a/profile-abdelraouf.html
+++ b/profile-abdelraouf.html
@@ -142,8 +142,39 @@
         }
 
     </style>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200;0,400;0,600;0,700;1,200;1,700&display=swap" rel="stylesheet">
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/bootstrap-icons.css" rel="stylesheet">
+    <link href="css/vegas.min.css" rel="stylesheet">
+    <link href="css/tooplate-barista.css" rel="stylesheet">
 </head>
 <body>
+    <nav class="navbar navbar-expand-lg">                
+        <div class="container">
+            <a class="navbar-brand d-flex align-items-center me-3" href="index.html">
+                <img src="images/smart door system.png" class="navbar-brand-image img-fluid" alt="Smart Door System Logo">
+                Smart Door System
+            </a>
+
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" 
+                    data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" 
+                    aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-lg-auto">
+                    <li class="nav-item"><a class="nav-link" href="index.html#section_1">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="index.html#section_2">About</a></li>
+                    <li class="nav-item"><a class="nav-link" href="index.html#section_3">Components</a></li>
+                    <li class="nav-item"><a class="nav-link" href="index.html#section_4">Versions</a></li>
+                    <li class="nav-item"><a class="nav-link" href="index.html#section_5">Contact</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
     <div class="container">
         <header>
             <img src="images/team/abdelraouf.jpg" alt="Profile Picture" class="profile-pic">
@@ -214,5 +245,11 @@
             </div>
         </footer>
     </div>
+    <script src="js/jquery.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/jquery.sticky.js"></script>
+    <script src="js/click-scroll.js"></script>
+    <script src="js/vegas.min.js"></script>
+    <script src="js/custom.js"></script>
 </body>
 </html>
