--- a/profile-abdelraouf.html
+++ b/profile-abdelraouf.html
@@ -9,9 +9,9 @@
 
         :root {
             --primary-color: #f0f0f0;
-            --secondary-color: #007BFF;
-            --background-color: #121212;
-            --card-background: #1e1e1e;
+            --secondary-color: #ffb84d; /* لون الأزرار والعناوين الفرعية */
+            --background-color: #1a1a1a; /* لون الخلفية الرئيسية (الأسود الغامق) */
+            --card-background: #1a1a1a; /* لون خلفية الكارد (نفس الخلفية لتوحيد اللون) */
             --text-color: #ccc;
             --heading-color: #fff;
             --border-radius: 8px;
@@ -27,14 +27,15 @@
             font-family: 'Roboto', sans-serif;
             line-height: 1.6;
             color: var(--text-color);
-            background: var(--background-color);
-            padding: 20px;
+            background: var(--background-color); /* تطبيق الخلفية على الـ body بالكامل */
+            /* أزل الـ padding من هنا أو اجعله 0 إذا كان موجوداً */
+            padding: 0; /* تم إزالة الـ padding ليحتل الـ body الشاشة بالكامل */
         }
 
         .container {
             max-width: 900px;
-            margin: 20px auto;
-            background: var(--card-background);
+            margin: 0 auto; /* تم تعديل الـ margin ليكون 0 auto */
+            background: var(--card-background); /* الخلفية الموحدة */
             border-radius: var(--border-radius);
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
             padding: 30px;
@@ -43,6 +44,7 @@
         header {
             text-align: center;
             margin-bottom: 30px;
+            padding-top: 80px; /* تم إضافة مسافة علوية لدفع المحتوى لأسفل */
         }
 
         header h1 {
@@ -141,6 +143,30 @@
             color: var(--secondary-color);
         }
 
+        /* Navbar specific styles for better integration */
+        .navbar {
+            background-color: var(--background-color); /* لضمان أن الشريط العلوي بنفس لون الخلفية */
+            position: fixed; /* لتثبيت شريط التنقل في الأعلى */
+            width: 100%; /* ليأخذ عرض الشاشة بالكامل */
+            top: 0; /* لتثبيته في أعلى الشاشة */
+            z-index: 1000; /* لضمان ظهوره فوق المحتوى الآخر */
+            border-bottom: 1px solid #333; /* خط فاصل بسيط */
+        }
+        .navbar-brand-image {
+            height: 30px; /* Adjust as needed */
+            margin-right: 10px;
+        }
+        .navbar-brand {
+            color: var(--heading-color) !important;
+            font-weight: 700;
+        }
+        .navbar-nav .nav-link {
+            color: var(--text-color) !important;
+        }
+        .navbar-nav .nav-link:hover {
+            color: var(--secondary-color) !important;
+        }
+
     </style>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -237,7 +263,7 @@
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M12 0c-6.627 0-12 5.373-12 12s5.373 12 12 12 12-5.373 12-12-5.373-12-12-12zm3 8h-1.35c-.538 0-.65.221-.65.778v1.222h2l-.209 2h-1.791v7h-3v-7h-2v-2h2v-1.223c0-1.782.935-2.777 2.656-2.777h2.344v3z" fill="#fff"/></svg>
                 </a>
                 <a href="https://www.instagram.com/yourprofile" target="_blank">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M12 0c-3.149 0-3.529.013-4.757.07-1.173.057-1.996.248-2.653.518-.62.259-1.161.6-1.75 1.19-2.028 2.029-2.31 4.757-2.333 7.747v.001c.023 2.99.305 5.718 2.333 7.747.59.59 1.13.931 1.75 1.19.657.27 1.48.461 2.653.518 1.228.057 1.608.07 4.757.07s3.529-.013 4.757-.07c1.173-.057 1.996-.248 2.653-.518.62-.259 1.161-.6 1.75-1.19 2.028-2.029 2.31-4.757 2.333-7.747v-.001c-.023-2.99-.305-5.718-2.333-7.747-.59-.59-1.13-.931-1.75-1.19-.657-.27-1.48-.461-2.653-.518-1.228-.057-1.608-.07-4.757-.07zm0 1.5c3.003 0 3.376.011 4.544.066 1.05.051 1.678.204 2.115.385.453.195.837.458 1.237.857.996.995 1.285 2.131 1.309 3.513.018 1.03-.004 1.365-.004 4.095s.022 3.065-.004 4.095c-.024 1.382-.313 2.518-1.309 3.513-.4.4-.784.662-1.237.857-.437.181-1.065.334-2.115.385-1.168.055-1.54.066-4.544.066-3.003 0-3.376-.011-4.544-.066-1.05-.051-1.678-.204-2.115-.385-.453-.195-.837-.458-1.237-.857-.996-.995-1.285-2.131-1.309-3.513-.018-1.03.004-1.365.004-4.095s-.022-3.065.004-4.095c.024-1.382.313-2.518 1.309-3.513.4-.4.784-.662 1.237-.857.437-.181 1.065-.334 2.115-.385 1.168-.055 1.54-.066 4.544-.066zm0 3.5c-2.485 0-4.5 2.015-4.5 4.5s2.015 4.5 4.5 4.5 4.5-2.015 4.5-4.5-2.015-4.5-4.5-4.5zm0 1.5c1.657 0 3 1.343 3 3s-1.343 3-3 3-3-1.343-3-3 1.343-3 3-3zm4.5-5.5c-.828 0-1.5.672-1.5 1.5s.672 1.5 1.5 1.5 1.5-.672 1.5-1.5-.672-1.5-1.5-1.5z" fill="#fff"/></svg>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M12 0c-3.149 0-3.529.013-4.757.07-1.173.057-1.996.248-2.653.518-.62.259-1.161.6-1.75 1.19-2.028 2.029-2.31 4.757-2.333 7.747v.001c.023 2.99.305 5.718 2.333 7.747.59.59 1.13.931 1.75 1.19.657.27 1.48.461 2.653.518 1.228.057 1.608.07 4.757.07s3.529-.013 4.757-.07c1.173-.057 1.996-.248 2.653-.518.62-.259 1.161-.6 1.75-1.19 2.028-2.029 2.31-4.757 2.333-7.747v-.001c-.023-2.99-.305-5.718-2.333-7.747-.59-.59-1.13-.931-1.75-1.19-.657-.27-1.48-.461-2.653-.518-1.228-.057-1.608-.07-4.757-.07zm0 1.5c3.003 0 3.376.011 4.544.066 1.05.051 1.678.204 2.115.385.453.195.837.458 1.237.857.996.995 1.285 2.131 1.309 3.513.018 1.03-.004 1.365-.004 4.095s.022 3.065-.004 4.095c-.024 1.382-.313 2.518-1.309 3.513-.4.4-.784.662-1.237.857-.437.181-1.065.334-2.115.385-1.168.055-1.54.066-4.544.066-3.003 0-3.376-.011-4.544-.066-1.05-.051-1.678-.204-2.115-.385-.453-.195-.837-.458-1.237-.857-.996-.995-1.285-2.131-1.309-3.513-.018-1.03.004-1.365.004-4.095s-.022-3.065.004-4.095c.024-1.382.313-2.518 1.309-3.513.4-.4.784-.662 1.237-.857.437.181 1.065-.334 2.115-.385 1.168-.055 1.54-.066 4.544-.066zm0 3.5c-2.485 0-4.5 2.015-4.5 4.5s2.015 4.5 4.5 4.5 4.5-2.015 4.5-4.5-2.015-4.5-4.5-4.5zm0 1.5c1.657 0 3 1.343 3 3s-1.343 3-3 3-3-1.343-3-3 1.343-3 3-3zm4.5-5.5c-.828 0-1.5.672-1.5 1.5s.672 1.5 1.5 1.5 1.5-.672 1.5-1.5-.672-1.5-1.5-1.5z" fill="#fff"/></svg>
                 </a>
                 <a href="https://t.me/yourusername" target="_blank">
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M23.91 3.79L20.3 20.84c-.25 1.21-.98 1.5-2 .94l-5.5-4.07-2.66 2.57c-.3.3-.55.56-1.1.56-.72 0-.6-.27-.84-.95L6.3 13.7l-5.45-1.7c-1.18-.35-1.19-1.16.26-1.75l21.26-8.2c.97-.43 1.9.24 1.53.94" fill="#fff"/></svg>
