--- a/profile-abdelraouf.html
+++ b/profile-abdelraouf.html
@@ -192,11 +192,20 @@
 
     <footer>
       <p>Connect with me:</p>
-      <div class="social-icons">
-        <a href="https://facebook.com/yourprofile" target="_blank">🌐</a>
-        <a href="https://instagram.com/yourprofile" target="_blank">📸</a>
-        <a href="https://t.me/yourusername" target="_blank">✈️</a>
-      </div>
+      <li class="social-icon-item">
+                                        <a href="https://www.facebook.com/share/167Fq9bmrP/" target="_new" class="social-icon-link bi-facebook">
+                                        </a>
+                                    </li>
+        
+                                    <li class="social-icon-item">
+                                        <a href="https://www.facebook.com/share/1EeFPEewJA/" target="_new" class="social-icon-link bi-facebook">
+                                        </a>
+                                    </li>
+
+                                    <li class="social-icon-item">
+                                        <a href="https://telegram.me/abdo_shinkada" target="_new" class="social-icon-link bi-telegram">
+                                        </a>
+                                    </li>
     </footer>
   </div>
 
