--- a/profile-abdelraouf.html
+++ b/profile-abdelraouf.html
@@ -11,6 +11,7 @@
 
   <!-- Bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
 
   <style>
     :root {
@@ -46,7 +47,7 @@
       color: var(--secondary-color) !important;
     }
 
-    /* Container Card */
+    /* Profile Card */
     .profile-card {
       max-width: 900px;
       margin: 100px auto 40px auto;
@@ -108,14 +109,32 @@
       border-top: 1px solid #444;
       color: #888;
     }
-    .social-icons a {
-      color: var(--primary-color);
-      font-size: 24px;
-      margin: 0 12px;
-      transition: color 0.3s;
+
+    /* Social Icons */
+    .social-icon {
+      display: flex;
+      justify-content: center;
+      list-style: none;
+      padding: 0;
+      margin: 20px 0 0 0;
+      gap: 12px;
     }
-    .social-icons a:hover {
-      color: var(--secondary-color);
+    .social-icon-link {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      width: 45px;
+      height: 45px;
+      border-radius: 50%;
+      background: #333;
+      color: #fff;
+      font-size: 20px;
+      transition: all 0.3s ease;
+      text-decoration: none;
+    }
+    .social-icon-link:hover {
+      background: var(--secondary-color);
+      color: #fff;
     }
   </style>
 </head>
@@ -192,20 +211,12 @@
 
     <footer>
       <p>Connect with me:</p>
-      <li class="social-icon-item">
-                                        <a href="https://www.facebook.com/share/167Fq9bmrP/" target="_new" class="social-icon-link bi-facebook">
-                                        </a>
-                                    </li>
-        
-                                    <li class="social-icon-item">
-                                        <a href="https://www.facebook.com/share/1EeFPEewJA/" target="_new" class="social-icon-link bi-facebook">
-                                        </a>
-                                    </li>
-
-                                    <li class="social-icon-item">
-                                        <a href="https://telegram.me/abdo_shinkada" target="_new" class="social-icon-link bi-telegram">
-                                        </a>
-                                    </li>
+      <ul class="social-icon">
+        <li><a href="https://www.facebook.com/share/167Fq9bmrP/" target="_blank" class="social-icon-link"><i class="bi bi-facebook"></i></a></li>
+        <li><a href="https://www.facebook.com/share/1EeFPEewJA/" target="_blank" class="social-icon-link"><i class="bi bi-facebook"></i></a></li>
+        <li><a href="https://telegram.me/abdo_shinkada" target="_blank" class="social-icon-link"><i class="bi bi-telegram"></i></a></li>
+        <li><a href="https://telegram.me/abdu1610" target="_blank" class="social-icon-link"><i class="bi bi-telegram"></i></a></li>
+      </ul>
     </footer>
   </div>
 
