--- a/profile-abdelraouf.html
+++ b/profile-abdelraouf.html
@@ -193,8 +193,8 @@
 
     <section>
       <h2>Education</h2>
-      <h3>Bachelor of Computer Science</h3>
-      <p><strong>Cairo University, 2018</strong></p>
+      <h3>Student in the Department of Automatic Control</h3>
+      <p><strong>College of Electronic technology - Tripoli, Active student</strong></p>
     </section>
 
     <section>
