--- a/profile-abdelraouf.html
+++ b/profile-abdelraouf.html
@@ -164,7 +164,7 @@
 
   <!-- Profile Card -->
   <div class="profile-card text-center">
-    <img src="images/team/abdelraouf.jpg" alt="Profile Picture" class="profile-pic">
+    <img src="images/team/abdelraouf m.jpg" alt="Profile Picture" class="profile-pic">
     <h1>Abdelraouf Mabrouk</h1>
     <p>Web Developer | UI Designer</p>
 
