--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 
                         
 
-                                <a href="#barista-team" class="smoothscroll btn custom-btn custom-border-btn mt-3 mb-4">Meet the creaters</a>
+                                <a href="project-deatails.html" class="smoothscroll btn custom-btn custom-border-btn mt-3 mb-4">more details</a>
                             </div>
 
                         </div>
@@ -620,6 +620,7 @@
   // أول ما يفتح المودال يولد سؤال
   document.addEventListener("DOMContentLoaded", generateCaptcha);
 </script>
+
 
 
 
