--- a/project-deatails.html
+++ b/project-deatails.html
@@ -137,7 +137,7 @@
         <h2>لماذا Smart Door System؟</h2>
         <div class="content-block">
             <p>
-                فكرة المشروع بدت من رغبتي في خلق حل مبتكر يجمع بين الأمان والراحة. لاحظت الحاجة لنظام تحكم في الأبواب يكون أكثر تطوراً من الأقفال التقليدية، يمنح المستخدم القدرة على مراقبة والتحكم في بابه من أي مكان. كان هدفي توفير **تجربة أمان متقدمة** وسهلة الاستخدام للبيوت والمكاتب.
+                   فكرة هذا المشروع من دراسةٍ مُعمَّقةٍ لتكنولوجيا الأردوينو (Arduino)، وخاصةً تطبيقات التحكم في الأبواب باستخدام المحركات المؤازرة (Servo Motors)، بالإضافة إلى استكشاف إمكانات مكتبة Tkinter في لغة البرمجة بايثون (Python) لتصميم واجهات رسومية فعّالة. من هذا المزيج، برزت الحاجة لتطوير نظام حماية متكامل ومتقدم للأبواب يجمع بين الأمان المُحكم والتحكم المرن.
             </p>
             <p>
                 هنا، تقدر تحط صورة أو فيديو يوضح المشكلة اللي حليتها أو يوضح الحاجة لهذا المشروع.
