--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <body>
                 
             <main>
-                <nav class="navbar navbar-expand-lg">                
+                <nav class="navbar navbar-lg">                
                     <div class="container">
                         <a class="navbar-brand d-flex align-items-center me-3" href="index.html">
                             <img src="images/smart door system.png" class="navbar-brand-image img-fluid" alt="Smart Door System Logo">
@@ -479,4 +479,4 @@
         <script src="js/bootstrap.min.js"></script>
         <script src="js/jquery.sticky.js"></script>
         <script src="js/vegas.min.js"></script>
-       
+        <scrip
