--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <a class="nav-link click-scroll" href="#section_1">Home</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link click-scroll" href="#section_2">Our Story</a>
+    <a class="nav-link click-scroll" href="download.html">app</a>
   </li>
   <li class="nav-item">
     <a class="nav-link click-scroll" href="#section_3">Components</a>
@@ -621,6 +621,7 @@
   // أول ما يفتح المودال يولد سؤال
   document.addEventListener("DOMContentLoaded", generateCaptcha);
 </script>
+
 
 
 
