--- a/index.html
+++ b/index.html
@@ -58,13 +58,13 @@
     <a class="nav-link click-scroll" href="download.html">app</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link click-scroll" href="#section_3">Components</a>
+    <a class="nav-link click-scroll" href="download.html">Components</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link click-scroll" href="#section_4">Previous Versions</a>
+    <a class="nav-link click-scroll" href="download.html">Previous Versions</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link click-scroll" href="#section_5">Contact</a>
+    <a class="nav-link click-scroll" href="download.html">Contact</a>
   </li>
   <li class="nav-item">
     <a class="nav-link click-scroll" href="team.html">team</a>
@@ -621,6 +621,7 @@
   // أول ما يفتح المودال يولد سؤال
   document.addEventListener("DOMContentLoaded", generateCaptcha);
 </script>
+
 
 
 
