--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                                     <a class="nav-link click-scroll" href="#section_5">Contact</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link click-scroll" href="team.html">team</a>
+                                    <a class="nav-link click-scroll" href="download.html">team</a>
                                 </li>
                             </ul>
                             </div>
@@ -461,3 +461,4 @@
 
                                     <li class="social-icon-item">
                                         <a href="https://telegram
+
