--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
 
         <link href="css/tooplate-barista.css" rel="stylesheet">
          <style>
-      .navbar .nav-link[href="team.html"] {
+      .navbar .nav-link[href="download.html"] {
         color: white !important;
         font-weight: 600;
       }
-      .navbar .nav-link[href="team.html"]:hover {
+      .navbar .nav-link[href="download.html"]:hover {
         color: #f1c40f !important; /* تقدر تغير اللون */
       }
              </style>
@@ -55,7 +55,7 @@
     <a class="nav-link click-scroll" href="#section_1">Home</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link click-scroll" href="#section_2">app</a>
+    <a class="nav-link click-scroll" href="#section_2">Our Story</a>
   </li>
   <li class="nav-item">
     <a class="nav-link click-scroll" href="#section_3">Components</a>
@@ -67,7 +67,7 @@
     <a class="nav-link click-scroll" href="#section_5">Contact</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link click-scroll" href="team.html">team</a>
+    <a class="nav-link click-scroll" href="download.html">App</a>
   </li>
 </ul>
 
@@ -157,14 +157,10 @@
               <div class="team-block-wrap">
                 <div class="team-block-info d-flex flex-column" style="padding-top: 30px;">
                   <div class="d-flex flex-column text-center mt-auto mb-3">
-                    <h4 class="text-white mb-2">abdelraouf</h4>
-                    <p style="background:#ffb84d; color:#000; padding:4px 10px; 
-                              border-radius:6px; display:inline-block; font-style:italic;">
-                      the Project Designer and Developer
-                    </p>
+                    <h4 class="text-white mb-2">Abdelraouf</h4>
                   </div>
                   <p class="text-white mb-0">
-                    I loved Python and that helped me develop the project.
+                    the Project Designer and Developer.
                   </p>
                 </div>
                 <div class="team-block-image-wrap">
@@ -184,14 +180,10 @@
               <div class="team-block-wrap">
                 <div class="team-block-info d-flex flex-column" style="padding-top: 30px;">
                   <div class="d-flex flex-column text-center mt-auto mb-3">
-                    <h4 class="text-white mb-2">abdulali</h4>
-                    <p style="background:#ffb84d; color:#000; padding:4px 10px; 
-                              border-radius:6px; display:inline-block; font-style:italic;">
-                      the Project Designer
-                    </p>
+                    <h4 class="text-white mb-2">Abdulali</h4>
                   </div>
                   <p class="text-white mb-0">
-                    I loved Python and that helped me designed the project.
+                    the Project Designer
                   </p>
                 </div>
                 <div class="team-block-image-wrap">
@@ -211,11 +203,7 @@
               <div class="team-block-wrap">
                 <div class="team-block-info d-flex flex-column" style="padding-top: 30px;">
                   <div class="d-flex flex-column text-center mt-auto mb-3">
-                    <h4 class="text-white mb-2">dr.ahmed</h4>
-                    <p style="background:#ffb84d; color:#000; padding:4px 10px; 
-                              border-radius:6px; display:inline-block; font-style:italic;">
-                      the supervisor
-                    </p>
+                    <h4 class="text-white mb-2">Dr.ahmed</h4>
                   </div>
                   <p class="text-white mb-0">
                     the supervisor of the project.
@@ -712,6 +700,7 @@
   // أول ما يفتح المودال يولد سؤال
   document.addEventListener("DOMContentLoaded", generateCaptcha);
 </script>
+
 
 
 
