--- a/download.html
+++ b/download.html
@@ -141,7 +141,7 @@
     </nav>
 
     <div class="container">
-        <h1>Download the App</h1>
+        <h1>Smart Door System App</h1>
         <p>Choose the right operating system for your device to download the app for free.</p>
         
         <div class="download-options">
@@ -165,4 +165,5 @@
 
 </body>
 </html>
+
 
