--- a/download.html
+++ b/download.html
@@ -138,20 +138,15 @@
 
 <div class="container">
     <h1>Smart Door System App</h1>
-    <p>Choose the right operating system for your device to download the app for free.</p>
+    <p>download the app for free to your device</p>
     
     <div class="download-options">
         <div class="download-item">
             <img src="https://upload.wikimedia.org/wikipedia/commons/d/d7/Android_robot.svg" alt="Android Logo">
-            <h3>For Android Devices</h3>
+            <h3>Android Devices</h3>
             <a href="app-release.apk" class="download-btn">Download Now</a>
         </div>
         
-        <div class="download-item">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/f/fa/Apple_logo_black.svg" alt="iOS Logo">
-            <h3>For iOS Devices</h3>
-            <a href="#" class="download-btn">Download Now</a>
-        </div>
     </div>
 </div>
 
@@ -159,3 +154,4 @@
 
 </body>
 </html>
+
