--- a/download.html
+++ b/download.html
@@ -144,7 +144,7 @@
         <div class="download-item">
             <img src="https://upload.wikimedia.org/wikipedia/commons/d/d7/Android_robot.svg" alt="Android Logo">
             <h3>Android Devices</h3>
-            <a href="app-release.apk" class="download-btn">Download Now</a>
+            <a href="Smart Door System.apk" class="download-btn">Download Now</a>
         </div>
         
     </div>
@@ -154,4 +154,5 @@
 
 </body>
 </html>
+
 
