--- a/profile-abdelraouf.html
+++ b/profile-abdelraouf.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Abdelraouf Mabrouk - Portfolio</title>
+  <title>Abdelraouf Mabrouk</title>
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
@@ -166,11 +166,11 @@
   <div class="profile-card text-center">
     <img src="images/team/abdelraouf m.jpg" alt="Profile Picture" class="profile-pic">
     <h1>Abdelraouf Mabrouk</h1>
-    <p>Web Developer | UI Designer</p>
+    <p>Website Designer & Telegram Group</p>
 
     <section>
       <h2>About Me</h2>
-      <p>I'm a passionate web developer with 5 years of experience building dynamic and responsive websites and applications. I have strong skills in HTML, CSS, and JavaScript, and I use modern frameworks to deliver the best user experience.</p>
+      <p>I would describe myself as someone who embraces challenges. I am consistently motivated to pursue goals that are considered difficult or nearly impossible, and I am fascinated by ideas that emerge from the most unconventional sources.</p>
     </section>
 
     <section>
