--- a/index.html
+++ b/index.html
@@ -84,18 +84,18 @@
                         <div class="row align-items-center">
 
                             <div class="col-lg-6 col-12 mx-auto">
-                                <em class="small-text">welcome to the project site</em>
+                                <em class="small-text">Your Gateway to Advanced Security</em>
                                 
                                 <h1>SMART DOOR SYSTEM</h1>
 
                                 <p class="text-white mb-4 pb-lg-2">
-                                   Future <em>of</em> Entry.
+                                   Your World, Securely Connected
                                 </p>
 
-                                <a class="btn custom-btn custom-border-btn smoothscroll me-3" href="downloads/smart door system full project.zip" download>full project
+                                <a class="btn custom-btn custom-border-btn smoothscroll me-3" href="downloads/smart door system full project.zip" download>Full project
                                 </a>
 
-                                <a  class="btn custom-btn custom-border-btn" data-bs-toggle="modal" data-bs-target="#ideasModal"><strong>management</strong></a>
+                                <a  class="btn custom-btn custom-border-btn" data-bs-toggle="modal" data-bs-target="#ideasModal"><strong>Management</strong></a>
                             </div>
 
                         </div>
@@ -119,15 +119,15 @@
                                     </video>
 
                                     <div class="about-video-info d-flex flex-column">
-                                        <h4 class="mt-auto">Python + Arduino project.</h4>
+                                        <h4 class="mt-auto">Experience the Evolution of Access</h4>
 
-                                        <h4>under supervision of dr.ahmed najah.</h4>
+                                        
                                     </div>
                                 </div>
                             </div>
 
                             <div class="col-lg-5 col-12 mt-4 mt-lg-0 mx-auto">
-                                <em class="text-white">SdS.co</em>
+                                <em class="text-white">SDS</em>
 
                                 <h2 class="text-white mb-3">Smart Door System</h2>
 
@@ -149,7 +149,7 @@
             <!-- العناوين -->
             <div class="col-lg-12 col-12 text-center mb-5" style="margin-top: 80px;">
               <em class="text-white">System Designers</em>
-              <h2 class="text-white">Meet People</h2>
+              <h2 class="text-white">Meet The People</h2>
             </div>
 
             <!-- Member 1 -->
@@ -663,6 +663,7 @@
   // أول ما يفتح المودال يولد سؤال
   document.addEventListener("DOMContentLoaded", generateCaptcha);
 </script>
+
 
 
 
