--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
                             </div>
                         </div>
                     </section>
-<section class="barista-section section-padding section-bg" id="barista-team">
+<section class="about-section section-padding" id="section_2">
                         <div class="container">
                             <div class="row justify-content-center">
 
@@ -868,3 +868,4 @@
     document.addEventListener("DOMContentLoaded", generateCaptcha);
 </script>
 </html>
+
