--- a/index.html
+++ b/index.html
@@ -738,7 +738,7 @@
                                             </div>
 
                                             <div class="col-lg-6 col-12 mx-auto mt-5 mt-lg-0 ps-lg-5">
-                                                <iframe class="google-map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3379.360634869669!2d13.091544615532703!3d32.51879978098871!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x13dff4895f8f5c45%3A0x5311f61e4b671c5e!2sCollege%20Of%20Electronic%20Technology!5e0!3m2!1sen!2sly!4v1678885961311" width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>                                              
+                                                <iframe class="google-map" src="https://maps.app.goo.gl/zCTrCEdiQaNg3ZbSA" width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>                                              
                                             </div>
 
                                         </div>
@@ -868,3 +868,4 @@
     document.addEventListener("DOMContentLoaded", generateCaptcha);
 </script>
 </html>
+
