--- a/index.html
+++ b/index.html
@@ -738,7 +738,7 @@
                                             </div>
 
                                             <div class="col-lg-6 col-12 mx-auto mt-5 mt-lg-0 ps-lg-5">
-                                                <iframe class="google-map" src="https://maps.app.goo.gl/zCTrCEdiQaNg3ZbSA" width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>                                              
+                                                <iframe class="google-map" src="https://maps.app.goo.gl/3y11jZRZrroVJgr87" width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>                                              
                                             </div>
 
                                         </div>
@@ -868,4 +868,5 @@
     document.addEventListener("DOMContentLoaded", generateCaptcha);
 </script>
 </html>
+
 
