--- a/index.html
+++ b/index.html
@@ -738,7 +738,7 @@
                                             </div>
 
                                             <div class="col-lg-6 col-12 mx-auto mt-5 mt-lg-0 ps-lg-5">
-                                                <iframe class="google-map" src="https://maps.google.com/?cid=3291507822488428883&g_mp=CiVnb29nbGUubWFwcy5wbGFjZXMudjEuUGxhY2VzLkdldFBsYWNl" width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>                                              
+                                                <iframe class="google-map" <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3350.9402904133476!2d13.208813800000001!3d32.8732992!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x13a892fcb32eca83%3A0x619d434092d48989!2z2YPZhNmK2Kkg2KfZhNiq2YLZhtmK2Kkg2KfZhNil2YTZg9iq2LHZiNmG2YrYqQ!5e0!3m2!1sen!2sly!4v1757105976697!5m2!1sen!2sly" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>                                            
                                             </div>
 
                                         </div>
@@ -868,6 +868,7 @@
     document.addEventListener("DOMContentLoaded", generateCaptcha);
 </script>
 </html>
+
 
 
 
