--- a/index.html
+++ b/index.html
@@ -57,6 +57,11 @@
             .navbar-nav .nav-link {
                 color: var(--white-color);
             }
+            /* Give Meet The People section same gradient effect */
+#barista-team {
+    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.35), var(--primary-color));
+    padding: 80px 0; /* باش يخلي مساحة واضحة */
+}
 
             .navbar-nav .nav-link.active, 
             .navbar-nav .nav-link:hover {
@@ -868,6 +873,7 @@
     document.addEventListener("DOMContentLoaded", generateCaptcha);
 </script>
 </html>
+
 
 
 
