--- a/index.html
+++ b/index.html
@@ -68,7 +68,12 @@
             .navbar-toggler .navbar-toggler-icon:after {
                 background-color: var(--white-color);
             }
-
+/* صندوق Abdelraouf بس */
+#barista-team .team-block-wrap:first-child .team-block-info {
+    background: linear-gradient(to top, var(--primary-color) 0%, rgba(0,51,102,0.6) 60%, rgba(0,0,0,0.2) 100%);
+    border-radius: 12px;
+    padding: 20px;
+}
             /* Hero Section Colors */
             .hero-section {
                 background-color: var(--primary-color); /* Deep Blue background */
@@ -868,6 +873,7 @@
     document.addEventListener("DOMContentLoaded", generateCaptcha);
 </script>
 </html>
+
 
 
 
