--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
                                         Your World, Securely Connected
                                     </p>
 
-                                    <a class="btn custom-btn custom-border-btn smoothscroll me-3" href="downloads/smart door system full project.zip" download>Full project
+                                    <a class="btn custom-btn custom-border-btn smoothscroll me-3" href="dist/index.html" >employees
                                     </a>
 
                                     <a  class="btn custom-btn custom-border-btn" data-bs-toggle="modal" data-bs-target="#ideasModal"><strong>Management</strong></a>
@@ -873,6 +873,7 @@
     document.addEventListener("DOMContentLoaded", generateCaptcha);
 </script>
 </html>
+
 
 
 
