--- a/control.html
+++ b/control.html
@@ -102,6 +102,22 @@
             </div>
           </li>
 
+<!-- Toggle Livestream -->
+<li class="list-group-item">
+  <button type="button" class="btn-toggle ps-0"
+          data-bs-toggle="collapse" data-bs-target="#streamMenu"
+          aria-expanded="false" aria-controls="streamMenu">
+    Toggle Livestream
+  </button>
+  <div id="streamMenu" class="collapse" data-bs-parent="#sdsOptions">
+    <ul class="list-group list-group-flush list-group-dark ms-3">
+      <li class="list-group-item"><button class="cmd-btn" onclick="sendCommand('start_stream')">start livestream</button></li>
+      <li class="list-group-item"><button class="cmd-btn" onclick="sendCommand('stop_stream')">stop livestream</button></li>
+    </ul>
+  </div>
+</li>          
+
+          
           <!-- Penalty Activate -->
           <li class="list-group-item">
             <button type="button" class="btn-toggle ps-0"
@@ -220,4 +236,5 @@
   </script>
 </body>
 </html>
+
 
