--- a/control.html
+++ b/control.html
@@ -102,22 +102,6 @@
             </div>
           </li>
 
-<!-- Toggle Livestream -->
-<li class="list-group-item">
-  <button type="button" class="btn-toggle ps-0"
-          data-bs-toggle="collapse" data-bs-target="#streamMenu"
-          aria-expanded="false" aria-controls="streamMenu">
-    Toggle Livestream
-  </button>
-  <div id="streamMenu" class="collapse" data-bs-parent="#sdsOptions">
-    <ul class="list-group list-group-flush list-group-dark ms-3">
-      <li class="list-group-item"><button class="cmd-btn" onclick="sendCommand('start_stream')">start livestream</button></li>
-      <li class="list-group-item"><button class="cmd-btn" onclick="sendCommand('stop_stream')">stop livestream</button></li>
-    </ul>
-  </div>
-</li>          
-
-          
           <!-- Penalty Activate -->
           <li class="list-group-item">
             <button type="button" class="btn-toggle ps-0"
@@ -137,49 +121,36 @@
             </div>
           </li>
 
+          <!-- Toggle Livestream -->
+          <li class="list-group-item">
+            <button type="button" class="btn-toggle ps-0"
+                    data-bs-toggle="collapse" data-bs-target="#streamMenu"
+                    aria-expanded="false" aria-controls="streamMenu">
+              Toggle Livestream
+            </button>
+            <div id="streamMenu" class="collapse" data-bs-parent="#sdsOptions">
+              <ul class="list-group list-group-flush list-group-dark ms-3">
+                <li class="list-group-item"><button class="cmd-btn" onclick="sendCommand('start_stream')">start livestream</button></li>
+                <li class="list-group-item"><button class="cmd-btn" onclick="sendCommand('stop_stream')">stop livestream</button></li>
+              </ul>
+            </div>
+          </li>
+
         </ul>
       </div>
     </div>
 
-    <!-- ========== ADD-ON OPTIONS ========== -->
-    <div class="card control-card">
-      <button type="button" class="btn-toggle"
-              data-bs-toggle="collapse" data-bs-target="#addonOptions"
-              aria-expanded="false" aria-controls="addonOptions"
-              onclick="closeInnerMenus('#addonOptions')">
-        Smart Door System Add-on Options
-      </button>
-      <div id="addonOptions" class="collapse">
-        <ul class="list-group list-group-flush list-group-dark">
-          <li class="list-group-item"><a href="downloads/colors.png" download>TKinter Color Chart</a></li>
-        </ul>
+    <!-- LIVESTREAM VIDEO BOX -->
+    <div id="livestreamBox" style="display:none; margin-top:20px;" class="card control-card">
+      <h3 class="p-3">📺 Livestream</h3>
+      <div class="ratio ratio-16x9">
+        <iframe id="twitchStream"
+          src="https://player.twitch.tv/?channel=jq7v444&parent=10.183.115.162"
+          frameborder="0" allowfullscreen="true" scrolling="no">
+        </iframe>
       </div>
     </div>
 
-    <!-- ========== EXPLANATION ========== -->
-    <div class="card control-card mb-5">
-      <button type="button" class="btn-toggle"
-              data-bs-toggle="collapse" data-bs-target="#explain"
-              aria-expanded="false" aria-controls="explain"
-              onclick="closeInnerMenus('#explain')">
-        Smart Door System Explanation
-      </button>
-      <div id="explain" class="collapse">
-        <ul class="list-group list-group-flush list-group-dark">
-         <li class="list-group-item"><a href="downloads/smart door system - project arduino components.pptx" download>Arduino Components</a></li>
-         <li class="list-group-item"><a href="downloads/smart door system - project python components.pptx" download>Python Components</a></li>
-         <li class="list-group-item"><a href="downloads/Arduino Libraries.txt" download>Arduino Libraries</a></li>
-         <li class="list-group-item"><a href="downloads/Python Libraries.txt" download>Python Libraries</a></li>
-         <li class="list-group-item"><a href="downloads/Arduino Explanation.txt" download>Explain Arduino Code</a></li>
-         <li class="list-group-item"><a href="downloads/Python Explanation.txt" download>Explain Python Code</a></li>
-         <li class="list-group-item"><a href="downloads/smart door system 1.0.zip" download>Version 1.0</a></li>
-         <li class="list-group-item"><a href="downloads/smart door system 2.0.zip" download>Version 2.0</a></li>
-         <li class="list-group-item"><a href="downloads/smart door system 3.0.zip" download>Version 3.0</a></li>
-         <li class="list-group-item"><a href="downloads/dt-06 wifi configuration.pdf" download>DT-06 WiFi Config</a></li>
-         <li class="list-group-item"><a href="downloads/FaceRecognition Explanation.txt" download>Face Recognition</a></li>
-        </ul>
-      </div>
-    </div>
   </div>
 
   <!-- Bootstrap 5 (JS) -->
@@ -190,7 +161,6 @@
     import { initializeApp } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-app.js";
     import { getDatabase, ref, set } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-database.js";
 
-    // إعدادات مشروعك
     const firebaseConfig = {
       apiKey: "AIzaSyACQ7ot2G6wvmNRM_hmmTDK8p7zMBQ1w2c",
       authDomain: "smart-door-system-project.firebaseapp.com",
@@ -202,23 +172,24 @@
       measurementId: "G-HY1Y22VZJT"
     };
 
-    // تهيئة Firebase
     const app = initializeApp(firebaseConfig);
     const db = getDatabase(app);
 
-    // دالة تبعت الأمر لفايربيز
     function sendCommand(command) {
       set(ref(db, "commands/last"), {
         action: command,
         timestamp: Date.now()
       });
       alert("✅ Sent: " + command);
-    }
 
-    // نخليها متاحة للـ HTML
+      if (command === "start_stream") {
+        document.getElementById("livestreamBox").style.display = "block";
+      } else if (command === "stop_stream") {
+        document.getElementById("livestreamBox").style.display = "none";
+      }
+    }
     window.sendCommand = sendCommand;
 
-    // يقفل أي قوائم فرعية مفتوحة لما الزر الكبير يتسكر
     window.closeInnerMenus = function (parentId) {
       setTimeout(() => {
         let parent = document.querySelector(parentId);
@@ -236,5 +207,3 @@
   </script>
 </body>
 </html>
-
-
