--- a/control.html
+++ b/control.html
@@ -46,7 +46,7 @@
             <div class="card p-3 my-3">
               <h2>Live Stream</h2>
               <iframe
-                src="https://player.twitch.tv/?channel=jq7v444&parent=10.183.115.162"
+                src="https://player.twitch.tv/?channel=jq7v444&parent=https://smartdoorsystem.github.io/smart-door-system/control.html"
                 height="480"
                 width="100%"
                 allowfullscreen="true">
@@ -164,3 +164,4 @@
   </script>
 </body>
 </html>
+
