--- a/control.html
+++ b/control.html
@@ -45,8 +45,8 @@
           <div class="col-12 col-md-8 mx-auto">
             <div class="card p-3 my-3">
               <h2>Live Stream</h2>
-              <iframe
-                src="https://player.twitch.tv/?channel=jq7v444&parent=https://smartdoorsystem.github.io/smart-door-system/control.html"
+            <iframe
+              src="https://player.twitch.tv/?channel=jq7v444&parent=smartdoorsystem.github.io"
                 height="480"
                 width="100%"
                 allowfullscreen="true">
@@ -164,4 +164,5 @@
   </script>
 </body>
 </html>
+
 
