--- a/control.html
+++ b/control.html
@@ -24,7 +24,7 @@
     }
     .control-card{
       background:var(--card); border:0; border-radius:16px; overflow:hidden;
-      box-shadow:0 10px 30px rgba(0,0,0,.35); margin-bottom:16px;
+      box-shadow:0 10px 30px rgba(0,0,0,.35); margin-bottom:16px ;  width: 100%  ;
     }
     .btn-toggle{
   display:block;
@@ -254,6 +254,7 @@
   </script>
 </body>
 </html>
+
 
 
 
