--- a/control.html
+++ b/control.html
@@ -29,7 +29,7 @@
     .btn-toggle{
   display:block;
       width:100%;
-      text-align:center;
+      text-align:left;
       padding:16px 20px;
       font-weight:700;
       color:#fff;
@@ -266,9 +266,5 @@
   </script>
 </body>
 </html>
-
-
-
-
 
 
